--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,9 @@
 theme: jekyll-theme-cayman
 title: Italiano Con Turbo
 description: Extra Interactive Practice
+
+github:
+  page2: chapter-2.html
+  page3: chapter-3.html
+  page4: chapter-4.html
+  page5: chapter-5.html
