--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,12 @@ title: Italiano Con Turbo
 description: Extra Interactive Practice
 
 github:
-  page2: chapter-2.html
-  page3: chapter-3.html
-  page4: chapter-4.html
-  page5: chapter-5.html
+  page2: corso.html
+  page3: alfabeto.html
+  page4: numeri.html
+  page5: settimana.html
+  page6: salutare.html
+  page7: presentarsi.html
+  page8: biography.html
+  page9: challenge1.html
+  page10: challenge2.html
