--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-dinky
-title: Italiano Con Turbo
-description: Extra Interactive Practice
+title: Italiano Con Turbo A1 
+description: Interactive Übungen zur Begleitung von Italiano Con Turbo A1
 
 github:
   page2: corso.html
